--- a/promptdeicomandi_test.html
+++ b/promptdeicomandi_test.html
@@ -137,7 +137,8 @@ ren "*.doc" "*_GESTITO.doc"
 echo ...</code></pre>
   </section>
 
-  <p class="footer">© Classe 3 TPSIT — Verifica laboratorio (CMD). Usa solo il Prompt dei comandi.</p>
+  <p class="footer">© Classe 3 TPSIT — Prof. Marco Cocciniglia - Verifica laboratorio (CMD). Usa solo il Prompt dei comandi.</p>
 </main>
 </body>
 </html>
+
