Aggiunta la lezione sui permessi file in Linux

--- a/wsl/index.html
+++ b/wsl/index.html
@@ -5,22 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="noindex, nofollow" />
   <title>Laboratorio: Bash su Windows (Git Bash / WSL) — Guida Studente</title>
-
+<link rel="icon" href="https://mcocciniglia.github.io/lezioni_classi_prime/assets/favicon.svg" type="image/svg+xml">
   <!-- CSS condiviso del corso (DSA-friendly) -->
-  <link rel="stylesheet" href="../assets/style.css" />
-  <link rel="stylesheet" href="../assets/theme.css" media="(prefers-color-scheme: dark)" />
-  <script defer src="../assets/theme.js"></script>
+  <!-- CSS/JS condivisi -->
+  <link rel="stylesheet" href="../assets/style.css?v=2025-10-17" />
+  <link rel="stylesheet" href="../assets/theme.css?v=2025-10-17" />
+  <script defer src="../assets/theme.js?v=2025-10-17"></script>
 </head>
 <body>
   <div class="wrap">
 
     <header class="header panel">
-      <h1>Laboratorio: <strong>Bash</strong> su Windows</h1>
+      <div class="header-top">
+        <h1>Laboratorio: <strong>Bash</strong> su Windows</h1>
+        <button id="theme-toggle" class="theme-toggle" aria-label="Cambia tema">🌓</button>
+      </div>
       <p class="muted">Obiettivo: usare il terminale per muoversi tra cartelle, creare/copiare file e scrivere un piccolo <code>.sh</code>.</p>
       <div class="badges">
         <span class="time">Durata: 60′</span>
         <span class="badge">Font ad alta leggibilità</span>
-        <span class="badge">Modalità: laboratorio + mini‑verifica</span>
+        <span class="badge">Modalità: laboratorio + mini-verifica</span>
       </div>
     </header>
 
@@ -56,7 +60,7 @@
     </section>
 
     <section>
-      <h2>2) Mini‑cheatsheet (da tenere a portata)</h2>
+      <h2>2) Mini-cheatsheet (da tenere a portata)</h2>
       <div class="grid cols-2 panel">
         <div>
           <h3>Muoversi e creare</h3>
@@ -127,7 +131,7 @@ echo "Backup completato"</pre>
     </section>
 
     <section>
-      <h2>5) Mini‑verifica in aula / Moodle (max 40′)</h2>
+      <h2>5) Mini-verifica in aula / Moodle (max 40′)</h2>
       <div class="grid cols-2">
         <div class="panel">
           <h3>Q1 — Saluto</h3>
@@ -187,7 +191,7 @@ cp -n *.txt testo/ 2&gt;/dev/null</pre>
     </section>
 
     <footer>
-      <p>Materiale per gli studenti — corso di Laboratorio di Informatica. Pagina ottimizzata per la leggibilità (font DSA‑friendly). © Prof. Marco Cocciniglia.</p>
+      <p>Materiale per gli studenti — corso di Laboratorio di Informatica. Pagina ottimizzata per la leggibilità (font DSA-friendly). © Prof. Marco Cocciniglia.</p>
     </footer>
   </div>
 </body>
