Aggiunge lezione html_struttura

--- a/html_struttura/index.html
+++ b/html_struttura/index.html
@@ -8,36 +8,22 @@
   <title>Lezione: Struttura di una pagina HTML</title>
 
   <!-- CSS comune -->
-	<link rel="stylesheet" href="../../common/assets/style.css">
-	<link rel="stylesheet" href="../../common/assets/theme.css">
-	<link rel="icon" href="../../common/assets/favicon.svg" type="image/svg+xml" />
+  <link rel="stylesheet" href="../../common/assets/style.css">
+  <link rel="stylesheet" href="../../common/assets/theme.css">
 
-  <!-- Prism.js per evidenziazione codice (senza bande) -->
+  <!-- Prism.js per evidenziazione codice -->
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" />
 
-  <!-- Fix per evitare "bande" nei blocchi di codice -->
- 
-
-  <!-- Script tema --> 
+  <!-- Script tema -->
   <script defer src="../../common/assets/theme.js"></script>
-  <link rel="icon" href="https://mcocciniglia.github.io/common/assets/favicon.svg" type="image/svg+xml" />
+  <link rel="icon" href="../../common/assets/favicon.svg" type="image/svg+xml" />
 
   <!-- Prism JS -->
   <script defer
           src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
   <script defer
           src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-markup.min.js"></script>
-<style>
-  
-  code[class*="language-"],
-  pre[class*="language-"] {
-    text-shadow: none !important;
-    -webkit-text-stroke: 0 !important;
-    font-weight: 400;
-  }
-</style>
-
 </head>
 <body>
 <a href="#contenuto" class="skip-link">Salta al contenuto principale</a>
@@ -102,7 +88,7 @@
 &lt;/html&gt;
 </code></pre>
       <p>
-        In classe puoi far riscrivere questo codice in un file <code>.html</code> e aprirlo nel browser.
+        Riscrivete questo codice in un file con estensione <code>.html</code> e apritelo nel browser.
       </p>
     </div>
   </section>
@@ -176,7 +162,7 @@
 &lt;/head&gt;
 </code></pre>
       <p>
-        Prova a cambiare il colore (<code>color</code>) e a vedere subito il risultato nel browser.
+        Provate a cambiare il valore di <code>color</code> e osservate il risultato nel browser.
       </p>
     </div>
   </section>
@@ -184,29 +170,37 @@
   <section class="panel exercise">
     <h2>Mini-esercizio (10-15 minuti)</h2>
     <ol>
-      <li>Crea un nuovo file chiamato <code>notizia.html</code>.</li>
-      <li>Scrivi lo scheletro della pagina (doctype, <code>&lt;html&gt;</code>, <code>&lt;head&gt;</code>, <code>&lt;body&gt;</code>).</li>
+      <li>Create un nuovo file chiamato <code>notizia.html</code>.</li>
+      <li>Scrivete lo scheletro della pagina (doctype, <code>&lt;html&gt;</code>, <code>&lt;head&gt;</code>, <code>&lt;body&gt;</code>).</li>
       <li>
-        Nel <code>&lt;body&gt;</code> inserisci:
+        Nel <code>&lt;body&gt;</code> inserite:
         <ul>
           <li>un <code>&lt;h1&gt;</code> con il titolo di una notizia inventata,</li>
           <li>un <code>&lt;h2&gt;</code> con un sottotitolo,</li>
           <li>due paragrafi <code>&lt;p&gt;</code> con il testo,</li>
-          <li>un link <code>&lt;a&gt;</code> che porti a un sito reale a tua scelta.</li>
+          <li>un link <code>&lt;a&gt;</code> che porti a un sito reale a vostra scelta.</li>
         </ul>
       </li>
-      <li>Aggiungi uno stile interno che colori il titolo e cambi il font-size dei paragrafi.</li>
-      <li>Salva e apri il file nel browser per controllare il risultato.</li>
+      <li>Aggiungete uno stile interno che colori il titolo e cambi il font-size dei paragrafi.</li>
+      <li>Salvate e aprite il file nel browser per controllare il risultato.</li>
     </ol>
   </section>
 
   <section class="panel">
     <h2>Per casa (facoltativo)</h2>
     <p>
-      Duplica il file <code>notizia.html</code> e crea una piccola “homepage” con due link:
-      uno alla notizia che hai scritto e uno a un sito esterno. Prova a cambiare colori e
+      Duplicate il file <code>notizia.html</code> e create una piccola “homepage” con due link:
+      uno alla notizia che avete scritto e uno a un sito esterno. Provate a cambiare colori e
       allineamenti con il CSS.
     </p>
   </section>
 
-  <footer class="container narrow small
+  <footer class="container narrow small muted">
+    <p>
+      Lezione su HTML e CSS di base – struttura, tag ed elementi.
+    </p>
+  </footer>
+
+</main>
+</body>
+</html>
